@@ -322,6 +322,8 @@ ENDIF(CMAKE_USE_WIN32_THREADS_INIT)
 
 FIND_PACKAGE(SleepFunction)
 FIND_PACKAGE(SelectArgtypes)
+CHECK_INCLUDE_FILE_DEFINE(sys/stat.h HAVE_SYS_STAT_H)
+CHECK_INCLUDE_FILE_DEFINE(strings.h HAVE_STRINGS_H)
 
 IF(CMAKE_SYSTEM MATCHES CYGWIN)
   CHECK_INCLUDE_FILE_DEFINE(stropts.h HAVE_STROPTS_H)
